# ee6470

./: readme.md
HW1/: readme(report).md  readme.md
HW1/part1/: Makefile  sobel  sobel.cpp
HW1/part2/: Testbench.cpp  main.cpp
HW3/: CMakeLists.txt  SobelFilter.cpp  SobelFilter.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp  readme(report).md
hw2/: readme(report).md  紀錄.txt
hw2/part1/sobel_fifo/: SobelFilter.cpp  SobelFilter.h  Testbench.cpp  Testbench.h  main.cpp
hw2/part1_rewrite/sobel_fifo/: SobelFilter.cpp  SobelFilter.h  Testbench.cpp  Testbench.h  main.cpp
hw2/part2/sobel_fifo/: CMakeLists.txt  SobelFilter.cpp  SobelFilter.h  Testbench.cpp  Testbench.h  main.cpp
hw4/: MemoryMap.h  SimpleBus.h  SobelFilter.cpp  SobelFilter.h  Testbench.cpp  Testbench.h  filter_def.h  main.cpp  readme(report).md
hw5/: readme(report).md
hw5/hw5_part1/: SobelFilter.cpp  System.cpp  Testbench.cpp
hw5/hw5_part2/: SobelFilter.cpp  System.cpp
hw6_test/: readme(report).md
hw6_test/step3_file/: lena_std_short_for_hw6.h  lena_std_short_for_hw6_v2.h  main.cpp
hw7_test/: readme(report).md
hw7_test/platform/: CMakeLists.txt  SobelFilter.h  dma.h  filter_def.h  main.cpp
hw7_v2/: readme(report).md
hw7_v2/platform/: CMakeLists.txt  SobelFilter.h  filter_def.h  main.cpp
lab01/datatypes/: datatypes.cpp
lab01/hello/: HelloWorld.h  main.cpp
lab02/adder-event/: CMakeLists.txt  adder.h  stim.h
lab02/adder-fifo/: CMakeLists.txt  adder.h  main.cpp  stim.h
lab02/sobel_fifo/: SobelFilter.cpp  SobelFilter.h  Testbench.cpp  Testbench.h  main.cpp
(+616 files in other folders)
